스테이지 추가. 체력창 추가

--- a/ShootingGame/bin/.gitignore
+++ b/ShootingGame/bin/.gitignore
@@ -1,3 +1,11 @@
-/Stage.class
+/GameManager.class
+/Movable.class
+/GameObject.class
+/MonsterWeapon.class
+/BackGround.class
+/Background.class
 /Monster.class
 /Player.class
+/ShootingGame.class
+/ShootingGame1.class
+/Stage.class
