미완성 타이틀 창 추가

--- a/ShootingGame/bin/.gitignore
+++ b/ShootingGame/bin/.gitignore
@@ -1,11 +1,11 @@
-/GameManager.class
-/Movable.class
-/GameObject.class
-/MonsterWeapon.class
-/BackGround.class
-/Background.class
-/Monster.class
-/Player.class
-/ShootingGame.class
-/ShootingGame1.class
-/Stage.class
+/MonsterFactory.class
+/StageManager.class
+/Game.class
+/TwoPlayerInputWindow.class
+/GameWindow.class
+/Main.class
+/GameWindow$1.class
+/GameWindow$2.class
+/GameWindow$3.class
+/Main$1.class
+/TwoPlayerInputWindow$1.class
