1인 채팅창, 타이틀 이미지, 음악, 점수 추가

--- a/ShootingGame/bin/.gitignore
+++ b/ShootingGame/bin/.gitignore
@@ -1,11 +1,10 @@
-/MonsterFactory.class
-/StageManager.class
-/Game.class
-/TwoPlayerInputWindow.class
-/GameWindow.class
-/Main.class
+/MainFrame$1.class
+/MainFrame$2.class
+/MainFrame$3.class
+/GameWindow$BackgroundPanel.class
 /GameWindow$1.class
 /GameWindow$2.class
 /GameWindow$3.class
-/Main$1.class
-/TwoPlayerInputWindow$1.class
+/MainFrame$4.class
+/MainFrame$5.class
+/MainFrame$6.class
