정원제(12/19) 수정

--- a/ShootingGame/bin/.gitignore
+++ b/ShootingGame/bin/.gitignore
@@ -1,10 +1,20 @@
-/MainFrame$1.class
-/MainFrame$2.class
-/MainFrame$3.class
-/GameWindow$BackgroundPanel.class
+/Background.class
 /GameWindow$1.class
 /GameWindow$2.class
 /GameWindow$3.class
+/GameWindow$BackgroundPanel.class
+/GameWindow.class
+/Main$1.class
+/Main.class
+/MainFrame$1.class
+/MainFrame$2.class
+/MainFrame$3.class
 /MainFrame$4.class
 /MainFrame$5.class
 /MainFrame$6.class
+/MainFrame.class
+/Monster.class
+/Player.class
+/ShootingGame1.class
+/Stage.class
+/MonsterWeapon.class
