채팅 주고받기, 점수 고유, 서로 승패 결과 확인

--- a/ShootingGame/bin/.gitignore
+++ b/ShootingGame/bin/.gitignore
@@ -18,3 +18,8 @@
 /ShootingGame1.class
 /Stage.class
 /MonsterWeapon.class
+/Server.class
+/Client.class
+/Server$ClientHandler.class
+/MainFrame$7.class
+/MainFrame$8.class
